# BANG-

./: IMPLEMENTATION_STATUS.md  PRD.txt  README.md  build_windows_exe.py  pyproject.toml
gamehub_manager/: __init__.py  __main__.py  app.py  main.py
gamehub_manager/core/: config.py  constants.py  errors.py  manifest.py  models.py  paths.py
gamehub_manager/db/: database.py  migrations.py  repositories.py
gamehub_manager/drives/: __init__.py  detector.py  initializer.py  scanner.py
gamehub_manager/install/: __init__.py  copier.py  jobs.py  planner.py  service.py  shortcuts.py  verifier.py
gamehub_manager/launch/: __init__.py  emulator.py  launcher.py  process_tracker.py
gamehub_manager/tests/: __init__.py
gamehub_manager/ui/: dialogs.py  game_details.py  game_table.py  install_panel.py  left_pane.py  main_window.py
tests/: __init__.py  conftest.py  helpers.py  test_database.py  test_install_flow.py  test_integration.py  test_library_indexing.py  test_manifest.py  test_paths.py  test_scanner.py
